Resolves: fdo#56882 font list in insert symbols not sorted

Change-Id: I1f793bf2656ee7feb59927962dc2c38587dba272